--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
-    "cloudinary": "^2.4.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -23,6 +23,7 @@
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "streamifier": "^0.1.1",
     "validator": "^13.12.0"
   }
 }
